--- a/MedFiles o AssistMedic/assets/styles/style.css
+++ b/MedFiles o AssistMedic/assets/styles/style.css
@@ -59,12 +59,19 @@ nav .iniciar_sesion:hover{
     transition: 0.3s;
 }
 
+.contenedor{
+    display:flex;
+    flex-direction: row;
+}
+
 main{
+    display: flex;
+    flex-direction: column;
+    flex:1;
     background-color: rgb(189, 189, 189);
     border-radius: 10px;
     margin: 10px;
     padding:10px;
-    width: 75%;
     background-color: rgb(75, 161, 87);
     border: 3px solid white;
 }
@@ -77,6 +84,16 @@ main p{
     margin-left: 10px;
     margin-right:10px;
     color: white;
+}
+
+aside{
+    margin: 10px;
+    padding:10px;
+    background-color: rgb(75, 161, 87);
+    border-radius: 10px;
+    display: flex;
+    flex: 0 0 300px;
+    border: 3px solid white;
 }
 
 footer p{
