--- a/MedFiles o AssistMedic/assets/styles/turnos.css
+++ b/MedFiles o AssistMedic/assets/styles/turnos.css
@@ -100,6 +100,41 @@ aside{
     border: 3px solid white;
 }
 
+aside .nav-link img{
+    height: 50px;
+    display: flex;
+}
+
+aside .retroceso{
+    margin-top: 10px;
+    margin-left: 110px;
+    width: fit-content;
+    display: inline-block;
+    align-items: center;
+    border-radius: 100%;
+    padding: 2px;
+    transition: background-color 0.3s ease;
+    fill:white;
+}
+
+aside .retroceso svg{
+    fill: white;
+    transition: fill 0.3s ease;
+}
+
+
+aside .retroceso:hover{
+    padding: 2px;
+    border-radius: 100%;
+    background-color: white;
+    transition: 0.3s ;
+}
+
+aside .retroceso:hover svg{
+    fill: rgb(98, 165, 107);
+}
+
+
 .list-group-item{
     width: 100%;
 }
