--- a/MedFiles o AssistMedic/assets/styles/turnos.css
+++ b/MedFiles o AssistMedic/assets/styles/turnos.css
@@ -79,12 +79,40 @@ main{
 
 main h1{
     margin: 10px;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
 }
 
 main p{
     margin-left: 10px;
     margin-right:10px;
     color: white;
+}
+
+main button{
+    width: 100%;
+    margin-top: 20px;
+    border: none;
+    font-size: 50px;
+    padding: 30px;
+    border: 5px solid rgb(248, 248, 248); 
+    border-radius: 30px; 
+    background-color: rgb(248, 248, 248); 
+    color:rgb(98, 165, 107); 
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+main button:hover{
+    color: white;
+    background-color: rgb(75, 161, 87);
+    transition: 0.3s;
+}
+
+main .botones{
+    margin-top: 50px;
 }
 
 aside{
