--- a/MedFiles o AssistMedic/assets/styles/regstyle.css
+++ b/MedFiles o AssistMedic/assets/styles/regstyle.css
@@ -3,65 +3,73 @@
     line-height: 2.15;
     padding-left: .75em;
     padding-right: .75em;
-    }
-    .card-registration .select-arrow {
+}
+
+.card-registration .select-arrow {
     top: 13px;
-    }
+}
 
-    .navbar {
-        border-radius: 20px;
-        margin: 8px; 
-        border: solid 3px white;
-    }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+}
 
-    
-    nav .nav-link{
-        display: inline-block;
-        text-decoration: none;
-        border-bottom: 3px solid transparent;
-        transition: border-color 0.3s;
-    }
-    
-    nav .nav-link:hover{
-        border-color: white;
-    }
-    
-    nav .registro_usuario{
-        display: flex;
-        align-items: center;
-    
-    }
-    
-    nav .registro{
-        border: 3px solid rgb(248, 248, 248); 
-        margin-right:10px; 
-        border-radius: 30px; 
-        background-color: rgb(248, 248, 248); 
-        color:rgb(98, 165, 107); 
-        font-weight: 1000; 
-        list-style-type: none; 
-        padding:7px;
-    }
-    
-    nav .registro:hover{
-        color: white;
-        background-color: rgb(98, 165, 107);
-        transition: 0.3s;
-    }
-    
-    nav .iniciar_sesion{
-        border: 3px solid rgb(248, 248, 248); 
-        margin-right:10px; 
-        border-radius: 30px; 
-        background-color: rgb(248, 248, 248); 
-        color:rgb(98, 165, 107); 
-        font-weight: 1000; 
-        list-style-type: none; 
-        padding:7px;
-    }
-    
-    nav .iniciar_sesion:hover{
-        color: white;
-        background-color: rgb(98, 165, 107);
-        transition: 0.3s;
-    }
+
+.navbar {
+    border-radius: 20px;
+    margin: 8px;
+    border: solid 3px white;
+}
+
+
+nav .nav-link {
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 3px solid transparent;
+    transition: border-color 0.3s;
+}
+
+nav .nav-link:hover {
+    border-color: white;
+}
+
+nav .registro_usuario {
+    display: flex;
+    align-items: center;
+
+}
+
+nav .registro {
+    border: 3px solid rgb(248, 248, 248);
+    margin-right: 10px;
+    border-radius: 30px;
+    background-color: rgb(248, 248, 248);
+    color: rgb(98, 165, 107);
+    font-weight: 1000;
+    list-style-type: none;
+    padding: 7px;
+}
+
+nav .registro:hover {
+    color: white;
+    background-color: rgb(98, 165, 107);
+    transition: 0.3s;
+}
+
+nav .iniciar_sesion {
+    border: 3px solid rgb(248, 248, 248);
+    margin-right: 10px;
+    border-radius: 30px;
+    background-color: rgb(248, 248, 248);
+    color: rgb(98, 165, 107);
+    font-weight: 1000;
+    list-style-type: none;
+    padding: 7px;
+}
+
+nav .iniciar_sesion:hover {
+    color: white;
+    background-color: rgb(98, 165, 107);
+    transition: 0.3s;
+}
